<resources>
    <string name="app_name">BiomedicApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_biomedicapp">Login BiomedicApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="pasword">Pasword</string>
    <string name="name">Name</string>
    <string name="description">description</string>
    <string name="register">¿Eres Nuevo? Registrate Aquí.</string>
    <string name="nombre">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="ciudad">Ciudad</string>
    <string name="welcome">¡Bienvenido de Nuevo!</string>
    <string name="login_text">Login a BiomedicApp</string>
    <string name="user_register_text">Registro de Usuario</string>
    <string name="form_text">Para Completar El Registro Llene los siguientes Datos</string>
    <string name="forgot_password_text">¿Olvidaste tu Contraseña?</string>
    <string name="next_button_title">Continuar</string>
    <string name="account_text">Mi Cuenta</string>
</resources>