<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="5dp"
        android:background="@color/primary"
        app:title="Login"
        app:titleTextColor="@color/white"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/card_image"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="3dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_login_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_biomedicapp"
                android:textSize="28sp"
                style="bold"
                android:textColor="@color/black"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/app_icon"
                android:padding="26dp"
                app:layout_constraintTop_toBottomOf="@id/title_login_card"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/card_image"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center"
            android:textColor="@color/secondary_dark"
            android:textSize="22sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey_text"
            android:textSize="18sp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_image"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_image"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            android:hint="@string/pasword">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:textColor="@color/secondary_dark"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_marginEnd="22dp"
            />

    </LinearLayout>


    <Button
        android:id="@+id/bottom_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/secondary_dark"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="10dp"
        android:padding="9dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/button_rounded"
        app:layout_constraintBottom_toTopOf="@id/tv_register"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/register"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/secondary_dark"
        android:textStyle="italic"
        />


</androidx.constraintlayout.widget.ConstraintLayout>