<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.ui.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="5dp"
        android:background="@color/primary"
        app:logo="@drawable/ic_baseline_arrow_back_24"
        app:title="Registro"
        app:titleTextColor="@color/white"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_register_text"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:textColor="@color/secondary_dark"
            android:textSize="22sp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_text"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="22dp"
            android:textColor="@color/grey_text"
            android:textSize="18sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_image"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="24dp"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/nombre">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surname_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_image"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/surname">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_image"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/ciudad">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_image"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_image"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            android:hint="@string/pasword">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <Button
        android:id="@+id/bottom_start"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:text="@string/next_button_title"
        android:textColor="@color/secondary_dark"
        android:layout_marginBottom="100dp"
        android:layout_marginHorizontal="10dp"
        android:padding="9dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:visibility="visible"
        android:background="@drawable/button_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/bottom_start_disbale"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:text="@string/next_button_title"
        android:textColor="@color/grey_disable"
        android:layout_marginBottom="100dp"
        android:layout_marginHorizontal="10dp"
        android:padding="9dp"
        android:visibility="gone"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/button_disable_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>